// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`syncSubstances > syncSubstances First Importation 1`] = `
{
  "_id": 56427210,
  "data": {
    "atoms": {
      "C": 15,
      "H": 23,
      "N": 3,
      "O": 3,
      "S": 1,
    },
    "charge": 0,
    "compounds": [
      {
        "$id": 647412,
        "$ref": "compounds",
      },
    ],
    "em": 325.14601278769004,
    "mf": "C15H23N3O3S",
    "mw": 325.42678760773083,
    "nbFragments": 1,
    "ocl": {
      "idCode": "ff}qb@NJBqNPAFRJIRiIQIYSHeOAjUjjjijh@@",
      "noStereoTautomerID": "ff}qb@NJBqNPAFRJKPiIQIYSKEOAifjjjijh@MTTpsGzPqeSGpq|L",
    },
    "unsaturation": 6,
  },
  "naturalProduct": false,
}
`;

exports[`syncSubstances > syncSubstances Incremental Importation 1`] = `
{
  "_id": 475724937,
  "data": {
    "atoms": {
      "C": 19,
      "H": 29,
      "N": 1,
      "O": 5,
      "S": 1,
    },
    "charge": 0,
    "compounds": [
      {
        "$id": 10738749,
        "$ref": "compounds",
      },
    ],
    "em": 383.17664421135004,
    "mf": "C19H29NO5S",
    "mw": 383.5027791447515,
    "nbFragments": 1,
    "ocl": {
      "idCode": "fe{aR@DpQ\`mPAFRREQIJKIHiSJQUoQVhHJJjfjb@@",
      "noStereoTautomerID": "fe{aR@DpQ\`mPAFRREQIJKIHiQZQUoQVhHJJjjjb@CUB\\\\Eq~dLkTq|L_C@",
    },
    "unsaturation": 6,
  },
  "naturalProduct": false,
}
`;
